--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "add": "^2.0.6",
     "antd": "^4.15.5",
     "axios": "^0.21.1",
+    "date-fns": "^2.28.0",
     "node-sass": "5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
