load more data and line chart

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "add": "^2.0.6",
     "antd": "^4.15.5",
     "axios": "^0.21.1",
+    "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "node-sass": "5",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-breadcrumbs-hoc": "^3.3.1",
