--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,7 @@
     "tabWidth": 2,
     "printWidth": 120,
     "singleQuote": true,
-    "endOfLine": "lf",
+    "endOfLine": "auto",
     "trailingComma": "all",
     "arrowParens": "always"
   }
